--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
   <!-- ICONS -->
   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
   <link rel="icon" href="favicon.ico">
+  <!-- TOASTR -->
+  <link rel="stylesheet" href="assets/css/toastr.css">
 </head>
 
 <body>
